# loan-scoring

./: .gitignore  README.md  cloudbuild.yaml  pyproject.toml  testst.py
.github/workflows/: balck.yml  python-app.yml
app/: Dockerfile  README.md  app.py  leg.py  pyproject.toml
app/data/: sample_raw_data.pkl  training_features.pkl
app/models/: best_lightGBM_model.pkl  best_model.pkl  lgbm_balanced.pkl  model  model_opti.pkl
app/tests/: __init__.py  test.py  test_unit.py
img/: .$lifecycle.drawio.bkp  lifecycle.drawio  shema.drawio
notebooks/: modeling.ipynb  tools.py
tests/: test.py
tests/unit/: test_unit.py
utils/: tools.py
utils/tools/: tools.py
