[tool.poetry]
name = "loan-credit-scoring"
version = "0.1.0"
description = ""
authors = ["Alhassanne <alhassanne.ahmed@servier.com>"]
readme = "README.md"
packages = [{include = "loan_credit_scoring"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pandas = "^1.5.3"
seaborn = "^0.12.2"
ipykernel = "^6.22.0"
streamlit = "^1.20.0"
lightgbm = "^3.3.5"
mlflow = "^2.1.1"
llvmlite = "^0.39.1"
yellowbrick = "^1.5"
imblearn = "^0.0"
plotly = "^5.14.0"
openpyxl = "^3.1.2"
keras = "^2.12.0"
tensorflow-macos = "^2.12.0"
hyperopt = "^0.2.7"
shap = "^0.41.0"
numba = "^0.56.4"
boltons = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
