[tool.poetry]
name = "loan"
version = "0.1.0"
description = ""
authors = ["Alhassanne <alhassanne.ahmed@servier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4"
streamlit = "^1.21.0"
joblib = "^1.2.0"
lightgbm = "^3.3.5"
lime = "^0.2.0.1"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
